@@ -4,5 +4,4 @@ parts = test
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zc.table
-extra-paths = parts/zope3/src
+eggs = zc.table [test]
