@@ -8,15 +8,14 @@ setup(
         'setuptools',
         'zc.resourcelibrary >= 0.6',
         'zope.app.form',
-        'zope.app.testing',
         'zope.cachedescriptors',
         'zope.component',
         'zope.formlib',
         'zope.i18n',
         'zope.interface',
         'zope.schema',
-        'zope.testing',
     ],
+    extras_require=dict(test=['zope.testing']),
     packages=find_packages('src'),
     package_dir= {'':'src'},
 
